[gd_scene load_steps=3 format=3 uid="uid://dts766lw3brxy"]

[ext_resource type="Script" uid="uid://yg3shfomalil" path="res://Scenes/Combat/combat.gd" id="1_344jg"]
[ext_resource type="Texture2D" uid="uid://cddo27nq4nl3k" path="res://Assets/image.png" id="2_6e47v"]

[node name="Combat" type="Node2D"]
script = ExtResource("1_344jg")

[node name="Use" type="Button" parent="."]
offset_left = 27.0
offset_top = 480.0
offset_right = 283.0
offset_bottom = 595.0
text = "Use"

[node name="Inventory" type="Button" parent="."]
offset_left = 320.0
offset_top = 471.0
offset_right = 525.0
offset_bottom = 596.0
text = "Inventory"

[node name="Ability One" type="TextureButton" parent="."]
offset_left = 549.0
offset_top = 469.0
offset_right = 799.0
offset_bottom = 551.0
texture_normal = ExtResource("2_6e47v")
ignore_texture_size = true
stretch_mode = 0

[node name="Ability Two" type="TextureButton" parent="."]
offset_left = 835.0
offset_top = 387.0
offset_right = 927.0
offset_bottom = 601.0
texture_normal = ExtResource("2_6e47v")
ignore_texture_size = true
stretch_mode = 0

[node name="Ability Three" type="TextureButton" parent="."]
offset_left = 964.0
offset_top = 403.0
offset_right = 1127.0
offset_bottom = 589.0
texture_normal = ExtResource("2_6e47v")
ignore_texture_size = true
stretch_mode = 0

[connection signal="button_down" from="Use" to="." method="_on_use_button_down"]
[connection signal="button_down" from="Inventory" to="." method="_on_inventory_button_down"]
[connection signal="button_down" from="Ability One" to="." method="_on_ability_one_button_down"]
[connection signal="button_down" from="Ability Two" to="." method="_on_ability_two_button_down"]
[connection signal="button_down" from="Ability Three" to="." method="_on_ability_three_button_down"]
